RESOLVED FIXED 255212
[Cocoa] "Pop" of bad audio heard at the start of certain YouTube videos
https://bugs.webkit.org/show_bug.cgi?id=255212
Summary [Cocoa] "Pop" of bad audio heard at the start of certain YouTube videos
Jer Noble
Reported 2023-04-09 20:34:15 PDT
[Cocoa] "Pop" of bad audio heard at the start of certain YouTube videos
Attachments
Jer Noble
Comment 1 2023-04-09 20:34:20 PDT
Jer Noble
Comment 2 2023-04-09 20:42:53 PDT
Ahmad Saleem
Comment 3 2023-04-10 04:08:50 PDT
*** Bug 251730 has been marked as a duplicate of this bug. ***
EWS
Comment 4 2023-04-11 13:53:23 PDT
Committed 262837@main (7f1bcb55362b): <https://commits.webkit.org/262837@main> Reviewed commits have been landed. Closing PR #12557 and removing active labels.
Jean-Yves Avenard [:jya]
Comment 5 2023-09-22 01:34:23 PDT
*** Bug 242678 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.